--- a/exercises/python/classes.ipynb
+++ b/exercises/python/classes.ipynb
@@ -30,50 +30,51 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "id": "e6eee1fd",
+      "metadata": {
+        "id": "e6eee1fd",
+        "outputId": "293044d4-c61f-4929-a7b0-47db991dc5ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "code: M504B\n",
+            "name: AI and Applications\n",
+            "credits: 30\n",
+            "semester: W2024\n",
+            "instructor: W.Mouris\n"
+          ]
+        }
+      ],
       "source": [
-        "class Course:\n",
+        "class course:\n",
         "  def __init__ (self, code, name, credits, semester, instructor):\n",
         "    self.code = code\n",
         "    self.name = name\n",
         "    self.credits = credits\n",
         "    self.semester = semester\n",
         "    self.instructor = instructor\n",
-        "  def __str__ (self):\n",
-        "     return(f\"Course code: {self.code}\\n\"\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return (f\"code: {self.code}\\n\"\n",
         "            f\"name: {self.name}\\n\"\n",
         "            f\"credits: {self.credits}\\n\"\n",
         "            f\"semester: {self.semester}\\n\"\n",
         "            f\"instructor: {self.instructor}\")\n",
-        "course = Course(\"M504B\", \"Romina Arab\", \"90\", \"Winter 2024\", \"William Baker Morrison\")\n",
-        "print(course)"
-      ],
-      "metadata": {
-        "id": "x3OAbFmK7B49",
-        "outputId": "5646fe7e-63d0-40bc-d2dc-cd50b19c22ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "x3OAbFmK7B49",
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Course code: M504B\n",
-            "name: Romina Arab\n",
-            "credits: 90\n",
-            "semester: Winter 2024\n",
-            "instructor: William Baker Morrison\n"
-          ]
-        }
+        "Course = course(\"M504B\", \"AI and Applications\", 30, \"W2024\", \"W.Mouris\")\n",
+        "print(Course)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DQXYV21Wqfzh"
+        "id": "8rDn1N_bG4O0"
       },
       "source": [
         "## Student Class\n",
@@ -87,11 +88,11 @@
         "- A `get_gpa` method.\n",
         "- A `set_course_mark` method."
       ],
-      "id": "DQXYV21Wqfzh"
+      "id": "8rDn1N_bG4O0"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "according-purse",
       "metadata": {
         "id": "according-purse"
@@ -103,10 +104,27 @@
         "    self.first_name = first_name\n",
         "    self.last_name = last_name\n",
         "    self.number = number\n",
-        "    self.Course = {}\n",
+        "    self.course = {}\n",
         "  def __str__(self):\n",
-        "    Course_info = \"\\n\".join([f\"{Course.name}: {mark}\" for Course, mark in self.Course.items()])\n",
-        ""
+        "    course_info = \"\\n\".join([f\"{course.name}: {mark}\" for course, mark in self.course.items()])\n",
+        "    return (f\"student: {self.first_name} {self.last_name}\\n\"\n",
+        "            f\"Student number: {self.number}\\n\"\n",
+        "            f\"Courses and Marks: {course_info}\")\n",
+        "    def get_gpa (self):\n",
+        "      if not self.course:\n",
+        "        return 0.0\n",
+        "        total_credit = sum(course.credits for course in self.course.keys())\n",
+        "        weighted_sum = sum(course.credits * mark for course, mark in self.course.items())\n",
+        "        return weighted_sum / total_credit\n",
+        "    def set_course_mark(self, course, mark):\n",
+        "        if not isinstance(course, Course):\n",
+        "            raise ValueError(\"Invalid course object.\")\n",
+        "        if not (0 <= mark <= 100):\n",
+        "            raise ValueError(\"Mark must be between 0 and 100.\")\n",
+        "        self.courses[course] = mark\n",
+        "\n",
+        "course1 = course(\"CS101\", \"Introduction to Computer Science\", 3, \"Fall 2023\", \"Dr. Smith\")\n",
+        "course2 = course(\"MATH101\", \"Calculus I\", 4, \"Fall 2023\", \"Prof. Johnson\")"
       ]
     },
     {
