--- a/exercises/python/code_style.ipynb
+++ b/exercises/python/code_style.ipynb
@@ -55,44 +55,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "id": "2f170a2a",
       "metadata": {
-        "id": "2f170a2a",
-        "outputId": "a60b61e7-6458-4ba3-c90f-9bea09b7d3dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2f170a2a",
+        "outputId": "72f2b91d-f320-4440-df92-24c6b11bee11"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Area of small circle = 3.14\n",
-            "Perimeter of small circle = 6.28\n",
-            "Area of big circle = 78.5\n",
-            "Perimeter of big circle = 31.400000000000002\n"
+            "Area of small circle = 3.141592653589793\n",
+            "Perimeter of small circle = 6.283185307179586\n",
+            "Area of big circle = 78.53981633974483\n",
+            "Perimeter of big circle = 31.41592653589793\n"
           ]
         }
       ],
       "source": [
-        "PI = 3.14\n",
+        "from re import S\n",
+        "import math\n",
+        "\n",
         "class Circle:\n",
+        "  \"\"\"calculating the circle and paramiter\"\"\"\"\n",
         "    def __init__(self, radius):\n",
         "        self.radius = radius\n",
+        "\n",
         "    @property\n",
         "    def area(self):\n",
-        "        return (self.radius **2) * PI\n",
+        "        return (self.radius ** 2) * math.pi\n",
+        "\n",
         "    @property\n",
         "    def perimete(self):\n",
-        "        return 2 * self.radius * PI\n",
-        "Small_CIRCLE = Circle(1)\n",
-        "BigCIR_CLE = Circle(5)\n",
-        "print(f\"Area of small circle = {Small_CIRCLE.area}\")\n",
-        "print(f\"Perimeter of small circle = {Small_CIRCLE.perimete}\")\n",
-        "print(f\"Area of big circle = {BigCIR_CLE.area}\")\n",
-        "print(f\"Perimeter of big circle = {BigCIR_CLE.perimete}\")"
+        "        return 2 * self.radius * math.pi\n",
+        "\n",
+        "\n",
+        "small_circle = Circle(1)\n",
+        "big_circle = Circle(5)\n",
+        "\n",
+        "print(f\"Area of small circle = {small_circle.area}\")\n",
+        "print(f\"Perimeter of small circle = {small_circle.perimete}\")\n",
+        "print(f\"Area of big circle = {big_circle.area}\")\n",
+        "print(f\"Perimeter of big circle = {big_circle.perimete}\")"
       ]
     },
     {
@@ -110,11 +118,11 @@
       "execution_count": 6,
       "id": "going-custom",
       "metadata": {
-        "id": "going-custom",
-        "outputId": "408e34a2-cdb5-4029-ee17-20c9f5d734b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "going-custom",
+        "outputId": "408e34a2-cdb5-4029-ee17-20c9f5d734b1"
       },
       "outputs": [
         {
