--- a/exercises/tools/pandas.ipynb
+++ b/exercises/tools/pandas.ipynb
@@ -39,12 +39,12 @@
       "execution_count": 16,
       "id": "frequent-fiber",
       "metadata": {
-        "id": "frequent-fiber",
-        "outputId": "41b990fa-16e4-414a-f611-e86a96d82f38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
-        }
+        },
+        "id": "frequent-fiber",
+        "outputId": "41b990fa-16e4-414a-f611-e86a96d82f38"
       },
       "outputs": [
         {
@@ -603,11 +603,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "vdtqRpIFN2Ai",
-        "outputId": "61da11b3-d131-4a12-e434-64e2bfa81f25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vdtqRpIFN2Ai",
+        "outputId": "61da11b3-d131-4a12-e434-64e2bfa81f25"
       },
       "id": "vdtqRpIFN2Ai",
       "execution_count": 17,
@@ -670,12 +670,12 @@
         "df.isnull().sum()"
       ],
       "metadata": {
-        "id": "2JVjYsj0-xj4",
-        "outputId": "de988f37-eea6-4862-9a60-be8ae6b5dbba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        }
+        },
+        "id": "2JVjYsj0-xj4",
+        "outputId": "de988f37-eea6-4862-9a60-be8ae6b5dbba"
       },
       "id": "2JVjYsj0-xj4",
       "execution_count": 16,
@@ -773,39 +773,71 @@
       "cell_type": "code",
       "source": [
         "df = df.copy(deep=True)\n",
-        "df[\"price\"].value_counts().sum()"
+        "df[\"\"].value_counts().sum()"
       ],
       "metadata": {
-        "id": "-06ZMM80FjkG",
-        "outputId": "c4a30848-cc32-4110-9fdb-2e77056ba5f0",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 704
+        },
+        "id": "-06ZMM80FjkG",
+        "outputId": "78b73770-2609-46ce-ca4e-bb71e744c7a4"
       },
       "id": "-06ZMM80FjkG",
-      "execution_count": 20,
+      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "58"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "''",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3805\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3806\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: ''",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-5f8b010f1595>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdeep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4101\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4102\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4103\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4104\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3810\u001b[0m             ):\n\u001b[1;32m   3811\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mInvalidIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3812\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3813\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3814\u001b[0m             \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: ''"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.barplot(df['length'].value_counts())"
+      ],
       "metadata": {
-        "id": "NRpMCruZGgFQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "id": "NRpMCruZGgFQ",
+        "outputId": "b75c986b-cd81-4f6e-e4a2-d629fd818af8"
       },
       "id": "NRpMCruZGgFQ",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'DataFrame' object has no attribute 'barplot'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-b49c456dacc7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbarplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'length'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6297\u001b[0m         ):\n\u001b[1;32m   6298\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6299\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6300\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6301\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'barplot'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -830,11 +862,11 @@
         "print(\"\\nDtataset after removing missig values:\", df_cleaned.shape)"
       ],
       "metadata": {
-        "id": "oRqFI_iP_NLj",
-        "outputId": "3ef62b4c-ee86-4726-a1a7-e1f76d8a0866",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oRqFI_iP_NLj",
+        "outputId": "3ef62b4c-ee86-4726-a1a7-e1f76d8a0866"
       },
       "id": "oRqFI_iP_NLj",
       "execution_count": 18,
@@ -865,11 +897,11 @@
       "execution_count": 22,
       "id": "flush-quantum",
       "metadata": {
-        "id": "flush-quantum",
-        "outputId": "c3979b13-ba15-4044-e720-aaefa06ec3b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "flush-quantum",
+        "outputId": "c3979b13-ba15-4044-e720-aaefa06ec3b9"
       },
       "outputs": [
         {
@@ -901,11 +933,11 @@
       "execution_count": 28,
       "id": "competent-shuttle",
       "metadata": {
-        "id": "competent-shuttle",
-        "outputId": "7cb873dd-5817-4317-a5bf-6448b8e6159a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "competent-shuttle",
+        "outputId": "7cb873dd-5817-4317-a5bf-6448b8e6159a"
       },
       "outputs": [
         {
@@ -941,12 +973,12 @@
       "execution_count": 35,
       "id": "mobile-celebrity",
       "metadata": {
-        "id": "mobile-celebrity",
-        "outputId": "0e27f683-43f3-4c1d-f1e1-35d0122069e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 551
-        }
+        },
+        "id": "mobile-celebrity",
+        "outputId": "0e27f683-43f3-4c1d-f1e1-35d0122069e4"
       },
       "outputs": [
         {
